# CrazyApe

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: clang-format-check.yml  main.yml  mathTest.yml  test1.sh
conf/: global.conf
include/: KNN.hpp  LogisticRegression.hpp  OLS.hpp  PCA.hpp  RSS.hpp  configReader.hpp  covariance.hpp  lasso.hpp  makeData.hpp  ridgeRegression.hpp  utilities.hpp
src/: LogisticRegression.cpp  OLS.cpp  PCA.cpp  RSS.cpp  configReader.cpp  lasso.cpp  makeData.cpp  ridgeRegression.cpp  utilities.cpp
tests/: CMakeLists.txt  testing.cpp
